--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -80,6 +80,16 @@ colours:
 
 
 changeLog:
+  - type: *dataIssue
+    date: "2021-02-15"
+    displayBanner: false
+    relativeUrl: /details/healthcare
+    headline: No update to England hospital data on 15 Feb 2021 
+    body: > 
+      Due to technical issues, NHS England were not able to produce an 
+      update to hospital data for publication on the dashboard on 15 Feb 2021.  
+      Data will next be updated on 16 February. 
+
   - type: *newFeature
     date: "2021-02-08"
     displayBanner: false
