--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -105,8 +105,8 @@ changeLog:
     relativeUrl: /
     headline: Summary page graphs are now clickable 
     body: > 
-      The graphs on the homepage only give a summary view of the changes over time. Click on the 
-      line charts to open the related topics page for more details and insights.
+      The graphs on the homepage only give a summary view of the changes over time. Click on them 
+      to open the related topics page for more details and insights.
 
   - type: *newFeature
     date: "2021-02-08"
