--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -84,11 +84,11 @@ changeLog:
     date: "2021-02-15"
     displayBanner: false
     relativeUrl: /details/healthcare
-    headline: No update to England hospital data on 15 Feb 2021 
+    headline: No update to England hospital data 
     body: > 
       Due to technical issues, NHS England were not able to produce an 
-      update to hospital data for publication on the dashboard on 15 Feb 2021.  
-      Data will next be updated on 16 February. 
+      update to hospital data for publication on the dashboard.  
+      Data will be updated in the next release. 
 
   - type: *newFeature
     date: "2021-02-08"
