Vacc NI correction: neg. 2nd dose due to lowered cumulative figure

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -81,6 +81,15 @@ colours:
 
 changeLog:
   - type: *dataIssue
+    date: "2021-02-22"
+    displayBanner: false
+    relativeUrl: /details/vaccinations?areaType=nation&areaName=Northern%20Ireland
+    headline: Vaccination numbers for Northern Ireland corrected 
+    body: > 
+      An error was identified in the reported vaccination figure for second doses in Northern Ireland. 
+      The corrected number results in a negative daily change.
+
+  - type: *dataIssue
     date: "2021-02-18"
     displayBanner: false
     relativeUrl: "/details/vaccinations?areaType=nation%26areaName=Scotland#card-people_who_have_received_vaccinations_by_report_date_daily"
