--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -86,8 +86,8 @@ changeLog:
     relativeUrl: /details/vaccinations?areaType=nation&areaName=Northern%20Ireland
     headline: Vaccination numbers for Northern Ireland corrected 
     body: > 
-      An error was identified in the reported vaccination figure for second doses in Northern Ireland. 
-      The corrected number results in a negative daily change.
+      We were notified of an error in the reported vaccination figure for second doses in Northern Ireland.
+      This was corrected and results in a negative daily change on the following day.
 
   - type: *dataIssue
     date: "2021-02-18"
