adds banner for delay

--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,3 +1,9 @@
+- appearByUpdate: "2021-01-02"
+  disappearByUpdate: "2021-01-03"
+  body: >
+    Owing to an issue with the processing of cases data, the update for 3 March 2021 is delayed.
+
+
 - appearByUpdate: "2021-02-02"
   disappearByUpdate: "2021-02-09"
   body: >
