--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -83,13 +83,16 @@ changeLog:
   - type: *dataIssue
     date: "2021-03-04"
     displayBanner: false
-    headline: 3 deaths within 28 days of a positive test removed from Wales and UK totals
+    headline: Adjustments to deaths within 28 days of a positive test for Wales, Scotland and UK totals
     relativeUrl: /details/deaths
     body: >
-      Following clinical validation work in Wales, three individuals previously reported 
-      as having died within 28 days of a positive test result have been removed from the figures. 
-      The total number of deaths in Wales and the United Kingdom have been adjusted accordingly. 
-
+      Following clinical validation work in Wales, three individuals previously
+      reported as having died within 28 days of a positive test result have been 
+      removed from the figures. Public Health Scotland identified an additional 
+      3 recently registered deaths within 28 days of a positive test result.
+      The total number of deaths in Wales, Scotland and the United Kingdom 
+      have been adjusted accordingly.
+      
   - type: *dataIssue
     date: "2021-03-03"
     displayBanner: true
