--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1787,12 +1787,12 @@ cards:
 
     fullWidth: true
     abstract: >
-      Number of people with at least one positive COVID-19 test result by type of test used in their first positive test, and specimen date.
-      Test types are shown as PCR, LFD confirmed (positive PCR result has been returned within 3 days)
-      and LFD unconfirmed (positive PCR result has not been returned within 3 days).
+      Number of people with at least one positive COVID-19 test result. Cases are shown by type of test used in their first positive test and by specimen date.
+      The test types shown are lab-based polymerase chain reaction (PCR), lateral flow device (LFD) confirmed (this means the LFD result has been verified
+      with a positive PCR result taken within 2 days) and LFD unconfirmed (no positive PCR result taken within 2 days).
       Individuals tested positive more than once are only counted once, on the date of their first positive test. Data for the period ending 5 days before 
       the date when the website was last updated with data for the selected area are incomplete, and some LFD results may change from unconfirmed to confirmed
-      as further PCR results are reported.
+      as more PCR results are reported.
 
     download:
       - newCasesPCROnlyBySpecimenDate
